--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <![endif]-->
 </head>
 <body id="top">
+<br />
+<a href="ROBERT HERMAN DESIGNED RESUME (1).docx"> </a>
+<br />
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
