another try at displaying this dumb thing

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
 <body id="top">
 <br />
+    <object data="ROBERT HERMAN DESIGNED RESUME (1).docx" type="application/pdf" width="100%" height="500px">
+      <p>Unable to display PDF file. <a href="ROBERT HERMAN DESIGNED RESUME (1).docx">Download</a> instead.</p>
+    </object>
+<br />
 <a href="ROBERT HERMAN DESIGNED RESUME (1).docx"> </a>
 <br />
 <div id="cv" class="instaFade">
