iframe this time

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
       <p>Unable to display PDF file. <a href="ROBERT HERMAN DESIGNED RESUME (1).docx">Download</a> instead.</p>
     </object>
 <br />
+<iframe src="https://docs.google.com/gview?url=http://remote.url.tld/path/to/document.doc&embedded=true"></iframe>
+<br />
+<iframe src="https://docs.google.com/document/d/11vnssm8ZgY07YgMc8iAVPziZkq6Z9eZn/edit?rtpof=true"></iframe>
+
+<br />
 <a href="ROBERT HERMAN DESIGNED RESUME (1).docx"> </a>
 <br />
 <div id="cv" class="instaFade">
