--- a/index.html
+++ b/index.html
@@ -16,17 +16,24 @@
 </head>
 <body id="top">
 <br />
-    <object data="ROBERT HERMAN DESIGNED RESUME (1).docx" type="application/pdf" width="100%" height="500px">
-      <p>Unable to display PDF file. <a href="ROBERT HERMAN DESIGNED RESUME (1).docx">Download</a> instead.</p>
+    <object data="MyResume.docx" type="application/pdf" width="100%" height="500px">
+      <p>Unable to display PDF file. <a href="MyResume.docx">Download</a> instead.</p>
     </object>
 <br />
+Iframe google docs 1
 <iframe src="https://docs.google.com/gview?url=http://remote.url.tld/path/to/document.doc&embedded=true"></iframe>
 <br />
+Iframe google docs 2
 <iframe src="https://docs.google.com/document/d/11vnssm8ZgY07YgMc8iAVPziZkq6Z9eZn/edit?rtpof=true"></iframe>
+<br />
+Iframe local
+<iframe src="MyResume.docx"></iframe>
+<br />
+a href
+<a href="MyResume.docx"> </a>
+<br />
 
-<br />
-<a href="ROBERT HERMAN DESIGNED RESUME (1).docx"> </a>
-<br />
+The rest
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
