--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 </head>
 <body id="top">
 <br />
+object, docx
     <object data="MyResume.docx" type="application/pdf" width="100%" height="500px">
       <p>Unable to display PDF file. <a href="MyResume.docx">Download</a> instead.</p>
+    </object>
+<br />
+object, pdf
+    <object data="MyResume.pdf" type="application/pdf" width="100%" height="500px">
+      <p>Unable to display PDF file. <a href="MyResume.pdf">Download</a> instead.</p>
     </object>
 <br />
 Iframe google docs 1
@@ -26,8 +32,11 @@ Iframe google docs 1
 Iframe google docs 2
 <iframe src="https://docs.google.com/document/d/11vnssm8ZgY07YgMc8iAVPziZkq6Z9eZn/edit?rtpof=true"></iframe>
 <br />
-Iframe local
+Iframe local docx
 <iframe src="MyResume.docx"></iframe>
+<br />
+Iframe local pdf
+<iframe src="MyResume.pdf"></iframe>
 <br />
 a href
 <a href="MyResume.docx"> </a>
