--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mustafa - Curriculum Vitae</title>
+<title>Rob's Resume</title>
 
 <meta name="viewport" content="width=device-width"/>
-<meta name="description" content="MSMSMSMSMS"/>
+<meta name="description" content="Rob's Resume"/>
 <meta charset="UTF-8"> 
 
 <link type="text/css" rel="stylesheet" href="style.css">
@@ -21,14 +21,5 @@ object, pdf
       <p>Unable to display PDF file. <a href="MyResume.pdf">Download</a> instead.</p>
     </object>
 <br />
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3753241-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
 </body>
 </html>
